--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -10,22 +10,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.1",
+    "antd": "^5.14.2",
+    "antd-input-otp": "^2.1.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
 }
