--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -39,6 +39,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
