--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.14",
+    "@mui/x-charts": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.2",
     "antd-input-otp": "^2.1.0",
