Zustand setup and websocket connection setup

--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -32,7 +32,8 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
