sending and receiving messages completed

--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.2",
@@ -26,12 +28,14 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
     "zustand": "^4.5.2"
   },
