--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material-tailwind/react": "^2.1.9",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.1",
@@ -27,12 +27,15 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.3",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-select": "^5.8.0",
+    "react-time-picker": "^6.6.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
