--- a/bookrade/package.json
+++ b/bookrade/package.json
@@ -14,6 +14,7 @@
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
